--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_USDT_REFERRAL_FEES_ADDRESS=''
-REACT_APP_USDC_REFERRAL_FEES_ADDRESS=''
+REACT_APP_USDT_REFERRAL_FEES_ADDRESS=FU8UE8S3maAsagH9MdJDXz4hnXUUbtXHvZiTay5g9jsN
+REACT_APP_USDC_REFERRAL_FEES_ADDRESS=EPjFWdd5AufqSSqeM2qN1xzybapC8G4wEGGkZwyTDt1v
